try to fix overflow on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
     box-shadow: 0px 0px 7px 5px black, inset 0px 0px 20px 20px #000000;
     z-index: 10;
     height: 100vh;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     overflow: hidden;
@@ -116,7 +116,8 @@ body {
     background-size: cover; 
     /* background: rgb(24,128,60);
     background: linear-gradient(180deg, rgba(15,68,33,1) 0%, rgba(1,64,23,1) 50%, rgba(0,6,2,1) 100%); */
-    background: url("../images/back.jpg") repeat center center; 
+    background: url("../images/back.jpg") repeat center center;
+    position: fixed; 
  }
 
 /* Game Sections */
